[gd_scene load_steps=3 format=3 uid="uid://cggeh34coe4qt"]

[ext_resource type="Script" path="res://screens/game/game.gd" id="1_gvjbj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0o8r"]
size = Vector2(10000, 40)

[node name="Game" type="Node2D"]
script = ExtResource("1_gvjbj")

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(5000, 160)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_a0o8r")

[node name="Players" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(76, 61)

[node name="Avatars" type="Node2D" parent="."]
position = Vector2(76, 61)

[node name="AvatarsSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://avatar/Avatar.tscn")
spawn_path = NodePath("../Avatars")

[node name="Controllers" type="Node" parent="."]

[node name="ControllerSpawner" type="MultiplayerSpawner" parent="Controllers"]
_spawnable_scenes = PackedStringArray("res://controller/Controller.tscn")
spawn_path = NodePath("..")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="Lobby" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control/Lobby"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Lobby/MarginContainer"]
layout_mode = 2

[node name="LobbyId" type="HBoxContainer" parent="Control/Lobby/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Lobby/MarginContainer/VBoxContainer/LobbyId"]
layout_mode = 2
text = "Lobby ID: "

[node name="LobbyIdValue" type="Label" parent="Control/Lobby/MarginContainer/VBoxContainer/LobbyId"]
layout_mode = 2
text = "123456"

[node name="LobbyPlayers" type="VBoxContainer" parent="Control/Lobby/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LobbyPlayerSpawner" type="MultiplayerSpawner" parent="Control/Lobby/MarginContainer/VBoxContainer"]
_spawnable_scenes = PackedStringArray("res://ui/lobby_player/LobbyPlayer.tscn")
spawn_path = NodePath("../LobbyPlayers")

[node name="LobbyControlls" type="HBoxContainer" parent="Control/Lobby/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Control/Lobby/MarginContainer/VBoxContainer/LobbyControlls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Leave
"

[node name="Button2" type="Button" parent="Control/Lobby/MarginContainer/VBoxContainer/LobbyControlls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"
